--- a/js/src/views/Dapps/Summary/summary.css
+++ b/js/src/views/Dapps/Summary/summary.css
@@ -21,7 +21,7 @@ $imageMargin: 72px;
 .author {
   color: #aaa;
   font-size: 0.75em;
-  margin-top: 0.5em;
+  margin: 0.5em 0 0 $imageMargin;
 }
 
 .description {
